--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 			position: absolute;
 			border: none;
 			pointer-events: none;
-			z-index: 10;
+			z-index: 20;
 			}
 		input::-webkit-slider-thumb {
 			pointer-events: all;
@@ -334,7 +334,7 @@
 		</div>
 	</header>
 	<div id="sizeGuideContainer">
-		<div id="guideBox"></div>
+		<div id="guideBox"style="z-index: 10;"></div>
 		<div id="guideName" style="z-index: 999;"></div>
 	</div>
 	<div class="page">
